# smartchat

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.codex-tmp/: debug_ws.db
backend/alembic/: env.py
backend/alembic/versions/: 2d6c9df0b0fa_add_display_category_to_conversation_participants.py  5a8dd0b1c3c2_add_related_conversation_id_to_notifications.py  bef0fe2e844c_init.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  audit.py  automation.py  base.py  conversation.py  enums.py  message.py  notification.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  automation.py  common.py  conversation.py  message.py  notification.py  user.py
backend/app/services/: __init__.py  admin_service.py  audit_service.py  auth_service.py  autoresponder_service.py  classification_service.py  message_service.py  notification_service.py  presence_service.py  spam_service.py
backend/app/websocket/: __init__.py  manager.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/smartchat_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api-overview.md  architecture.md  comparison.md  thesis-materials.md
frontend/static/css/: app.css
frontend/templates/: index.html
tests/: conftest.py  test_auth.py  test_automation.py  test_messaging.py  test_websocket.py
(+11 files in other folders)
